--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "test",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "engines": {
     "node": ">=14.0.0",
     "npm": ">=6.0.0"
   },
   "dependencies": {
-    "@lightbend/akkaserverless-javascript-sdk": "^0.33.8"
+    "@kalix-io/kalix-javascript-sdk": "^1.0.0-M4"
   },
   "devDependencies": {
-    "@lightbend/akkasls-scripts": "^0.33.8",
+    "@kalix-io/kalix-scripts": "1.0.0-M4",
     "chai": "^4.3.3",
     "jsdoc": "^3.6.3",
     "mocha": "^8.3.1",
@@ -27,8 +27,11 @@
   "scripts": {
     "start": "node src/index.js",
     "test": "mocha ./test",
-    "build": "akkasls-scripts build",
-    "package": "akkasls-scripts package",
-    "deploy": "akkasls-scripts deploy"
-  }
+    "build": "kalix-scripts build",
+    "package": "kalix-scripts package",
+    "deploy": "kalix-scripts deploy"
+  },
+  "bundleDependencies": [
+    "@kalix-io/kalix-javascript-sdk"
+  ]
 }
